# http-type

./: .gitignore  CMakeLists.txt  dns_trace.cpp  main.cpp  run.sh
py/: basicTypeRatio.csv  check.py  domainName.py  httpSize.py  receiveCDF.py  receiveCDFallday.py  top_50  typeRatio.csv  typeRatio.py
solveCDN/: 2017-11-25.dns  2017-11-25.http  2017-11-26.dns  2017-11-28.dns  2017-11-28.http  2017-12-02.dns  2017-12-02.http  2017-12-04.dns  2017-12-05.dns  2017-12-05.http  2017-12-08.dns  2017-12-10.http  2017-12-15.dns  2017-12-16.dns  2017-12-17.dns  2017-12-18.dns  2017-12-19.dns  2017-12-20.dns  2017-12-21.dns  2017-12-22.dns  2017-12-23.dns  2017-12-24.dns  2017-12-25.dns
solveCDNCnt/: 2017-11-26.http  2017-11-27.dns  2017-11-27.http  2017-11-30.dns  2017-11-30.http  2017-12-01.dns  2017-12-01.http  2017-12-03.dns  2017-12-03.http  2017-12-04.http  2017-12-08.http  2017-12-10.dns  2017-12-15.http
src/: CMakeLists.txt  bigrun.sh  dns_trace.cpp  dns_trace.h  headers.h  http_trace.cpp  http_trace.h  main.cpp  receiveRatio.cpp  roll.cpp  roll.h  tcp_receive.cpp  tcp_receive.h  utils.cpp  utils.h  wifi_error.cpp  wifi_error_syn.cpp
wifiError/: 2017-11-24  2017-11-25  2017-11-26  2017-11-27  2017-11-28  2017-11-29  2017-11-30  2017-12-01  2017-12-02  2017-12-03  2017-12-04  2017-12-05  2017-12-08  2017-12-09  2017-12-10  2017-12-15  2017-12-16  2017-12-17  2017-12-18  2017-12-19  2017-12-20  2017-12-21  2017-12-22  2017-12-23  2017-12-24  2017-12-25  2017-12-26  2017-12-27  2017-12-29  2017-12-30  2017-12-31  2018-01-02  2018-01-03  2018-01-04  2018-01-05  2018-01-06  (+3 more)
